--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
+        "brianium/paratest": "^7.1",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.20",
         "laravel/pint": "^1.0",
@@ -50,7 +51,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "test": "vendor/bin/phpunit --testdox",
+        "test:coverage": "vendor/bin/phpunit --coverage-html tests/coverage"
     },
     "extra": {
         "laravel": {
