--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^37.0.1",
+        "@ckeditor/ckeditor5-vue": "^5.0.0",
         "pinia": "^2.0.34"
     }
 }
