--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "nunomaduro/larastan": "^2.6",
         "nunomaduro/laravel-mojito": "^0.2.10",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.0",
