feat: Define environment variables in file .env.example

--- a/.env.example
+++ b/.env.example
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=42d2a1fe29cc40
+MAIL_PASSWORD=b6c1eb214ae5c0
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="andresalfredosotosuarez@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -56,3 +56,15 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ADMIN_EMAIL="admin@example.com"
+ADMIN_PASSWORD="12345678"
+
+CLIENT_EMAIL="client@example.com"
+CLIENT_PASSWORD="12345678"
+
+CURRENT_USER_ROLE=""
+
+PLACETOPAY_LOGIN="e3bba31e633c32c48011a4a70ff60497"
+PLACETOPAY_TRANKEY="ak5N6IPH2kjljHG3"
+PLACETOPAY_URL="https://checkout-co.placetopay.dev"
