feat: Add functionality of regenerate new link for the order when the previous payment link has been rejected

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,7 @@ CLIENT_PASSWORD="12345678"
 
 CURRENT_USER_ROLE=""
 
-PLACETOPAY_LOGIN="e3bba31e633c32c48011a4a70ff60497"
-PLACETOPAY_TRANKEY="ak5N6IPH2kjljHG3"
-PLACETOPAY_URL="https://checkout-co.placetopay.dev"
+PLACETOPAY_LOGIN
+PLACETOPAY_TRANKEY
+PLACETOPAY_URL
+PLACETOPAY_API
