feat: Add credentials of authentication in .env.example of webcheckout placetopay

--- a/.env.example
+++ b/.env.example
@@ -65,7 +65,7 @@ CLIENT_PASSWORD="12345678"
 
 CURRENT_USER_ROLE=""
 
-PLACETOPAY_LOGIN
-PLACETOPAY_TRANKEY
-PLACETOPAY_URL
-PLACETOPAY_API
+PLACETOPAY_LOGIN=""
+PLACETOPAY_TRANKEY=""
+PLACETOPAY_URL="https://checkout-co.placetopay.dev"
+PLACETOPAY_API="/api/session/"
