--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+PP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=merca-todo
+DB_DATABASE=merca_todo
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=42d2a1fe29cc40
-MAIL_PASSWORD=b6c1eb214ae5c0
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="andresalfredosotosuarez@gmail.com"
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -67,5 +67,5 @@ CURRENT_USER_ROLE=""
 
 PLACETOPAY_LOGIN=""
 PLACETOPAY_TRANKEY=""
-PLACETOPAY_URL="https://checkout-co.placetopay.dev"
+PLACETOPAY_URL=""
 PLACETOPAY_API="/api/session/"
