--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^37.0.1",
         "@ckeditor/ckeditor5-vue": "^5.0.0",
+        "@heroicons/vue": "^2.0.18",
         "pinia": "^2.0.34"
     }
 }
