--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@ckeditor/ckeditor5-build-classic": "^37.0.1",
         "@ckeditor/ckeditor5-vue": "^5.0.0",
         "@heroicons/vue": "^2.0.18",
+        "chart.js": "^4.3.0",
         "pinia": "^2.0.34"
     }
 }
