--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "opcodesio/log-viewer": "^2.4",
         "spatie/laravel-permission": "^5.10",
         "spatie/laravel-query-builder": "^5.2",
