ci: Modify continuos integration yml file adding phpstan analyse command

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -37,3 +37,5 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
+    - name: Search bugs via PHPStan level 8
+      run: vendor/bin/phpstan
